workspace = { members = ["parser"] }
[package]
name = "diorama"
version = "0.1.0"
description = "A toolbox for a semi-formal proving system"
authors = ["Stephen Rodriguez"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/srod5125/diorama_tb"
edition = "2021"
rust-version = "1.75.0"
#default-run = "src-tauri/src/target/debug/*"
#workspace = "../.."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }
lalrpop = "0.20.0"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = [] }


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
